fixed segative spacing at the bottom issues

--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -6,7 +6,6 @@ footer.footer {
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
-	margin-bottom: -20px;
 }
 @media screen and (max-width: 1000px) {
 	footer.footer {
@@ -15,7 +14,7 @@ footer.footer {
 }
 @media screen and (max-width: 600px) {
 	footer.footer {
-		margin-bottom: 30px;
+		margin-bottom: 48px;
 	}
 }
 footer.footer .logo {
