--- a/styles/globals.css
+++ b/styles/globals.css
@@ -16,6 +16,7 @@
 	--clr-light: rgb(255, 255, 255);
 	--clr-secondary: rgb(0, 66, 199);
 	--icon-color-matrix: #0affa0;
+	background-color: #212121;
 }
 
 div.body.dark {
